src/app/components/layout/pages/dashboard/dashboard.component.css
.grid-container {
    margin: 30px;
  }
  
  .dashboard-card {
    position: absolute;
    top: 0px;
    left: 10px;
    right: 0px;
    bottom: 10px;
    box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
    border: none;
  }
  
  .more-button {
    position: absolute;
    top: 5px;
    right: 10px;
  }
  
  .dashboard-card-content {
    text-align: center;
  }

.boton{
  width: 100%;
  height: 100px;
  margin: 5px;
  background-color: #465ac7;
  border: none;
  box-shadow: #00000040 0px 0px 16px;
  border-radius: 15px;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  transform: translateY(0px);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s ease;
}
.boton:hover{
  background-color: #596cd8;
  box-shadow: #0000001e 0px 0px 16px;
  transform: translateY(-8px);
  cursor: pointer;
}
.caja{
  width: 100%;
  height: auto;
  padding: 8px;
  box-sizing: border-box;
  overflow: scroll;
  text-overflow: ellipsis;

}

.mycard{
  display: flex;
  flex-direction: row;
  justify-items: center;
  align-items: center;
  justify-content: center;
  width: auto;
  height: auto;
  border: #e7e7e7 1px solid;
  padding: 8px;
  margin: 8px;
  border-radius: 15px;
}

.text-a{
  text-decoration: none;
  color: #ffffff;
}

.contenedor{
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 190px 200px 550px;;
  grid-auto-rows: auto;
  grid-auto-columns: auto;
  gap: 16px;
}
.hijo{
  width: 100%;  
}
.contenedor div:first-child{
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row: 1/2;
  height: auto;
}
.contenedor div:nth-child(2){
  height: auto;
  grid-column: 2/3;
  grid-row: 1/2;
}
.contenedor div:nth-child(5){
  /* grid-column: 2/3; */
  grid-row: 3/3;
}
.contenedor div:nth-child(6){
  grid-column: 2/3;
  grid-row: 3/2;
}
@media screen and (max-width: 1049px){
  .contenedor{
    grid-template-columns: 1fr;
    grid-template-rows: 400px 180px 390px 1fr;
  }
  .contenedor div:first-child{
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row: 1/2;
  }
  .contenedor div:nth-child(2){
    grid-column: 1/2;
    grid-row: 2/3;
  }
  .contenedor div:nth-child(5){
    /* grid-column: 2/3; */
    grid-row: 3/3;
  }
  .contenedor div:nth-child(6){
    grid-column: 1/2;
    grid-row: 4/4;
  }
  
}

@media screen and (max-width: 550px){
  .contenedor{
    grid-template-columns: 450px;
    grid-template-rows: 450px 160px 390px 1fr;
  }
  .contenedor div:first-child{
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row: 1/2;
  }
  .contenedor div:nth-child(2){
    grid-column: 1/2;
    grid-row: 2/3;
  }
  .contenedor div:nth-child(5){
    /* grid-column: 2/3; */
    grid-row: 3/3;
  }
  .contenedor div:nth-child(6){
    grid-column: 1/2;
    grid-row: 4/4;
  }
}

